Prevent navigation alignment from breaking the layout

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -56,6 +56,11 @@ body {
    =============================== */
 
 
+div.widget .extendednavigation ul.align-left,
+div.widget .extendednavigation ul.align-right {
+    float: none;
+}
+
 .widget.extendednavigation .bk-overlay {
     width: inherit !important;
     left: 0 !important;
